vimのlistchars変更。tmuxのステータスライン変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,14 +55,24 @@ set -g set-titles-string "@#(hostname | sed 's/\\\\..*//')"
 # ステータスラインカスタム関連
 set -g status-bg black
 set -g status-fg white
-set -g status-attr dim
-# 左部:whoami@hostname
-set -g status-left '#[fg=green,bold][#20(whoami)@#H]#[default]'
-# 右部:[2011/03/06(Sun)20:21]
-set -g status-right '#[fg=green,bold][%Y/%m/%d(%a)%H:%M]#[default]'
+
+set -g status-right-fg black
+set -g status-right-bg green
+set -g status-right "#(w | head -1 | cut -d: -f3) | %Y/%m/%d(%a)%H:%M"
+
+set -g status-left-fg black
+set -g status-left-bg magenta
+
 set -g message-attr bold
 set -g message-fg white
 set -g message-bg red
+
+setw -g window-status-format "#I:#W"
+setw -g window-status-current-format "#I:#W_#P"
+setw -g window-status-current-attr bright,reverse
+setw -g window-status-current-bg cyan
+setw -g window-status-current-fg black
+setw -g xterm-keys on
 
 set -g pane-active-border-fg white
 set -g pane-active-border-bg black
