tmuxのステータスラインでload averageを表示できない場合があるのを修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ set -g status-fg white
 
 set -g status-right-fg black
 set -g status-right-bg green
-set -g status-right "#(w | head -1 | cut -d: -f3) | %Y/%m/%d(%a)%H:%M"
+set -g status-right "#(uptime | awk -F: '{print \$NF}') | %Y/%m/%d(%a)%H:%M"
 
 set -g status-left-fg black
 set -g status-left-bg magenta
