vim-powerlineからvim-lightlineに乗り換えなど

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,11 @@
 	frag = cyan
 	old = red
 	new = green
+[diff]
+	algorithm = patience
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
