--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ unbind-key C-b
 bind t send-prefix
 
 # Loading .tmux.conf
-bind r source-file ~/.tmux.conf; display-message "Reload Tmux Config"
+bind r source-file ~/.tmux.conf\; display-message "Reload Tmux Config"
 # utf8 enabled
 set-window-option -g utf8 on
 set -g status-utf8 on
@@ -67,23 +67,19 @@ set -g message-attr bold
 set -g message-fg white
 set -g message-bg red
 
-setw -g window-status-format "#I:#W"
-setw -g window-status-current-format "#I:#W_#P"
+setw -g window-status-bg black
+setw -g window-status-fg white
 setw -g window-status-current-attr bright,reverse
 setw -g window-status-current-bg cyan
 setw -g window-status-current-fg black
+setw -g window-status-current-attr bold
 setw -g xterm-keys on
+setw -g mode-bg white
+setw -g mode-fg black
+setw -g automatic-rename on
 
 set -g pane-active-border-fg white
 set -g pane-active-border-bg black
-
-set-window-option -g mode-bg white
-set-window-option -g mode-fg black
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-attr bold
 
 # Key Bindings
 # vertical split window
