--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,7 +33,7 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 
 # シェルをラップし、shellの上でpbpasteを動くようにする
-set -g default-command "reattach-to-user-namespace -l zsh"
+#set -g default-command "reattach-to-user-namespace -l zsh"
 
 # 新しいpaneやwindowを開いた時に、$HOMEを使う
 set -g default-path $HOME
@@ -123,6 +123,6 @@ bind -t vi-copy Y copy-line
 bind / list-keys -t vi-copy
 
 # C-tC-y で、tmuxのバッファをクリップボードにコピーする
-bind ^y run-shell 'tmux save-buffer - | reattach-to-user-namespace pbcopy'
+#bind ^y run-shell 'tmux save-buffer - | reattach-to-user-namespace pbcopy'
 
 set -g default-terminal "screen-256color"
